objects/Asset.object
<CustomObject>
    <fields>
        <fullName>csord__Asset_Value__c</fullName>
        <description>Describes the asset in more detail</description>
        <inlineHelpText>Describes the asset in more detail</inlineHelpText>
        <label>Asset Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__External_Identifier2__c</fullName>
        <description>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</inlineHelpText>
        <label>External Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csord__External_Identifier__c</fullName>
        <description>DEPRECATED. External Id field used for bulk inserts of Orders &amp; Subscriptions objects.</description>
        <externalId>true</externalId>
        <inlineHelpText>DEPRECATED. Use External Identifier2 field instead.</inlineHelpText>
        <label>DEPRECATED External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Identification__c</fullName>
        <description>Identification string for the object, used as the reference from external systems.</description>
        <inlineHelpText>E.g. &quot;spokeServiceAmsterdam&quot; in Hub&amp;Spokes scenario.</inlineHelpText>
        <label>Identification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csord__Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent of this asset.</description>
        <inlineHelpText>The parent of this asset. Only one of Order, OrderLineItem, Service or ServiceLineItem can be filled in for any asset.</inlineHelpText>
        <label>Order Line Item</label>
        <referenceTo>csord__Order_Line_Item__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Order Request object which introduced the latest changes to this object.</description>
        <inlineHelpText>Order Request object which introduced the latest changes to this object.</inlineHelpText>
        <label>Order Request</label>
        <referenceTo>csord__Order_Request__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent of this asset.</description>
        <inlineHelpText>The parent of this asset. Only one of Order, OrderLineItem, Service or ServiceLineItem can be filled in for any asset.</inlineHelpText>
        <label>Order</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Service_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent of this asset.</description>
        <inlineHelpText>The parent of this asset. Only one of Order, OrderLineItem, Service or ServiceLineItem can be filled in for any asset.</inlineHelpText>
        <label>Service Line Item</label>
        <referenceTo>csord__Service_Line_Item__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent of this asset.</description>
        <inlineHelpText>The parent of this asset. Only one of Order, OrderLineItem, Service or ServiceLineItem can be filled in for any asset.</inlineHelpText>
        <label>Service</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__deliverable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliverable</label>
        <referenceTo>csord__Deliverable__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csord__deliverable_line_item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent of this asset.</description>
        <inlineHelpText>The parent of this asset. Only one of Order, OrderLineItem, Deliverable, DeliverableLineItem, Service or ServiceLineItem can be filled in for any asset.</inlineHelpText>
        <label>Deliverable Line Item</label>
        <referenceTo>csord__Deliverable_Line_Item__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Attribute_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Underlying attribute field</description>
        <inlineHelpText>Underlying attribute field</inlineHelpText>
        <label>Attribute Field</label>
        <referenceTo>cscfga__Attribute_Field__c</referenceTo>
        <relationshipLabel>Salesforce Assets</relationshipLabel>
        <relationshipName>Salesforce_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Cancelled_By_Change_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled By Change Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Delta_Status__c</fullName>
        <label>Delta Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Unchanged</fullName>
                </value>
                <value>
                    <fullName>Changed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replaced_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Replacement Assets</relationshipLabel>
        <relationshipName>Replacement_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Replacement_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replacement Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Replaced Assets</relationshipLabel>
        <relationshipName>Replaced_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>